2005-08-19  Diego Novillo  <dnovillo@redhat.com>

	PR 23476
	* tree-cfgcleanup.c (cleanup_control_expr_graph): Fold the
	conditional expression before testing its value.

2005-08-19  Diego Novillo  <dnovillo@redhat.com>

	* doc/invoke.texi: Fix documentation for -ftree-dominator-opts.

2005-08-19  Devang Patel  <dpatel@apple.com>

	PR tree-optimization/23048
	* tree-if-conv.c (if_convertible_bb_p): Supply basic_block as
	third parameter. Check whether latch is dominated by exit
	block or not.
	(if_convertible_loop_p): Supply exit block itself to
	if_convertible_bb_p.
	
2005-08-19  Richard Earnshaw  <richard.earnshaw@arm.com>

	PR target/23473
	* arm.md (arm_load_pic_register): Change argument to the mask of
	saved registers.  Call thumb_find_work_register if we need a 
	scratch register on Thumb.
	(arm_expand_prologue): Pass empty register set to 
	arm_load_pic_register.
	(thumb_expand_prologue): Pass live_regs_mask directly to
	arm_load_pic_register.
	* arm-protos.h (arm_load_pic_register): Update prototype.

2005-08-19  J"orn Rennecke <joern.rennecke@st.com>

	* sh.c (find_sole_member): New function.
	(sh_gimplify_va_arg_expr): Use it. Allow RECORD_TYPE mode mismatch
	if the record's alignment is larger than the size of its only member.

2005-08-19  Richard Earnshaw  <richard.earnshaw@arm.com>

	PR target/23436
	* arm.c (thumb_legitimize_reload_address): New function.
	* arm-protos.h (thumb_legitimize_reload_address): Add prototype.
	* arm.h (THUMB_LEGITIMIZE_RELOAD_ADDRESS): Call it.

2005-08-19  Paul Woegerer  <paul.woegerer@nsc.com>

	* config/crx/crx.c: Implement crx_decompose_address. Reject
	symbolic displacements since CRX register relative adressing
	mode can't handle unsigned 32-bit values as displacements.
	* config/crx/crx.h: Simplify definitions, remove redundant
	parenthesis and obsolete macros.
	* config/crx/crx.opt: Add new switch for debugging addresses.
	* config/crx/crx-protos.h: Add new declarations for above.
